--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
         versionName "1.0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         
-        multiDexEnabled true
-        ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a", "x86" ,  "x86_64"
-        }
+        //multiDexEnabled true
+        //ndk {
+        //    abiFilters "armeabi-v7a", "arm64-v8a", "x86" ,  "x86_64"
+        //}
     }
     buildTypes {
         debug {
@@ -44,10 +44,11 @@ android {
     splits {
         abi {
             enable true
-            reset()
-            //支持的ABIs
-            include 'armeabi-v7a', 'arm64-v8a', "x86" ,  "x86_64" 
-            //要不要一个全量ABIs的包
+            // 重置默认包含的目录，默认是全部
+            //reset()
+            // 指定支持的ABIs
+            //include 'armeabi-v7a', 'arm64-v8a', "x86" ,  "x86_64" 
+            // 要不要一个全量ABIs的包
             universalApk true 
         }
     }
